# DirectZDeps

./: .gitignore  CMakeLists.txt  build-unix.sh  build-windows.bat
.github/workflows/: build-release.yml
cmake/: Version.cmake
